--- a/public/ia10.html
+++ b/public/ia10.html
@@ -45,11 +45,15 @@
 
       <div class="ia10-container">
         <div class="ia10-ia10">
+
+          <a href="ia11.html">
           <img
             src="public/external/rectangle32101-986-200h.png"
             alt="Rectangle32101"
             class="ia10-rectangle3"
           />
+        </a>
+        
           <span class="ia10-text"><span>ДАЛІ</span></span>
           <span class="ia10-text2">
             <span>
@@ -68,11 +72,13 @@
             alt="image32104"
             class="ia10-image3"
           />
+        <a href="index.html">
           <img
             src="public/external/goback7846-d4y-200h.png"
             alt="GoBack7846"
             class="ia10-go-back"
           />
+        </a>
         </div>
       </div>
     </div>
