--- a/public/ia3.html
+++ b/public/ia3.html
@@ -51,18 +51,24 @@
             alt="Rectangle22111"
             class="ia3-rectangle2"
           />
-          <img
+
+        <a href="ia5.html"><img
             src="public/external/rectangle32112-p4xm-200h.png"
             alt="Rectangle32112"
             class="ia3-rectangle3"
           />
+        </a>
+
           <span class="ia3-text2"><span>ОТРИМАТИ КОД</span></span>
           <span class="ia3-text4"><span>Електронна пошта</span></span>
-          <img
+
+        <a href="index.html"><img
             src="public/external/goback7841-2gl3-200h.png"
             alt="GoBack7841"
             class="ia3-go-back"
           />
+        </a>
+
           <span class="ia3-text6"><span>ВХІД</span></span>
         </div>
       </div>
