--- a/public/ia5.html
+++ b/public/ia5.html
@@ -71,11 +71,13 @@
             alt="Rectangle72164"
             class="ia5-rectangle7"
           />
+        <a href="ia11.html">
           <img
             src="public/external/rectangle32165-0fo4-200h.png"
             alt="Rectangle32165"
             class="ia5-rectangle3"
           />
+        </a>
           <span class="ia5-text2"><span>ПІДТВЕРДИТИ</span></span>
           <img
             src="public/external/goback7842-yxis-200h.png"
