--- a/public/ia6.html
+++ b/public/ia6.html
@@ -51,11 +51,13 @@
             alt="Rectangle22121"
             class="ia6-rectangle2"
           />
+        <a href="ia-default.html">
           <img
             src="public/external/rectangle32122-pl7d-200h.png"
             alt="Rectangle32122"
             class="ia6-rectangle3"
           />
+        </a>
           <span class="ia6-text2"><span>ОТРИМАТИ КОД</span></span>
           <span class="ia6-text4"><span>Електронна пошта</span></span>
           <img
@@ -63,11 +65,13 @@
             alt="image271865"
             class="ia6-image27"
           />
-          <img
+        <a href="index.html">
+            <img
             src="public/external/goback7843-lzw-200h.png"
             alt="GoBack7843"
             class="ia6-go-back"
           />
+        </a>
         </div>
       </div>
     </div>
