--- a/public/ia-default.html
+++ b/public/ia-default.html
@@ -71,22 +71,23 @@
             src="public/external/rectangle72177-tgkc-200w.png"
             class="ia-default-rectangle7"
           />
-          <img
-            alt="Rectangle32178"
+          <a href="ia8.html">
+          <img alt="Rectangle32178"
             src="public/external/rectangle32178-wmqq-200h.png"
             class="ia-default-rectangle3"
-          />
+          /></a>
           <span class="ia-default-text2"><span>ПІДТВЕРДИТИ</span></span>
           <img
             alt="image261864"
             src="public/external/image261864-50uj-200w.png"
             class="ia-default-image26"
           />
+          <a href="ia6.html">
           <img
             alt="GoBack7844"
             src="public/external/goback7844-pbo-200h.png"
             class="ia-default-go-back"
-          />
+          /></a>
         </div>
       </div>
     </div>
