--- a/public/ia11.html
+++ b/public/ia11.html
@@ -51,11 +51,11 @@
             alt="Rectangle227"
             class="ia11-rectangle2"
           />
-          <img
+          <a href="ia20.html"><img
             src="public/external/rectangle428-1p5f-200h.png"
             alt="Rectangle428"
             class="ia11-rectangle4"
-          />
+          /></a>
           <span class="ia11-text02"><span>Далі</span></span>
           <span class="ia11-text04"><span>Київ</span></span>
           <span class="ia11-text06"><span>Харків</span></span>
