--- a/public/ia15.html
+++ b/public/ia15.html
@@ -46,11 +46,12 @@
       <div class="ia15-container">
         <div class="ia15-ia15">
           <span class="ia15-text"><span>РЕЄСТРАЦІЯ</span></span>
+          <a href="ia11.html">
           <img
             src="public/external/rectangle32137-gqrh-200h.png"
             alt="Rectangle32137"
             class="ia15-rectangle3"
-          />
+          /></a>
           <span class="ia15-text02"><span>ДАЛІ</span></span>
           <span class="ia15-text04">
             <span>
