--- a/public/ia8.html
+++ b/public/ia8.html
@@ -46,11 +46,11 @@
       <div class="ia8-container">
         <div class="ia8-ia8">
           <span class="ia8-text"><span>РЕЄСТРАЦІЯ</span></span>
-          <img
-            src="public/external/rectangle42144-uxo-200h.png"
+          <a href="ia9.html">
+          <img src="public/external/rectangle42144-uxo-200h.png"
             alt="Rectangle42144"
             class="ia8-rectangle4"
-          />
+          /></a>
           <img
             src="public/external/rectangle52145-h85g-200h.png"
             alt="Rectangle52145"
@@ -65,11 +65,12 @@
             alt="image251863"
             class="ia8-image25"
           />
+          <a href="ia-default.html">
           <img
             src="public/external/goback7845-6u3-200h.png"
             alt="GoBack7845"
             class="ia8-go-back"
-          />
+          /></a>
         </div>
       </div>
     </div>
