--- a/public/ia9.html
+++ b/public/ia9.html
@@ -53,11 +53,12 @@
               ЗАВЕРШЕННЯ РЕЕСТРАЦІЇ
             </span>
           </span>
+          <a href="ia15.html">
           <img
             src="public/external/rectangle32156-77u-200h.png"
             alt="Rectangle32156"
             class="ia9-rectangle3"
-          />
+          /></a>
           <span class="ia9-text6"><span>ДАЛІ</span></span>
           <img
             src="public/external/image241862-akhq-200w.png"
