--- a/public/ia-default.html
+++ b/public/ia-default.html
@@ -75,8 +75,10 @@
           <img alt="Rectangle32178"
             src="public/external/rectangle32178-wmqq-200h.png"
             class="ia-default-rectangle3"
+            
           /></a>
-          <span class="ia-default-text2"><span>ПІДТВЕРДИТИ</span></span>
+          <a href="ia8.html">
+          <span class="ia-default-text2"><span>ПІДТВЕРДИТИ</span></span></a>
           <img
             alt="image261864"
             src="public/external/image261864-50uj-200w.png"
