--- a/public/ia11.html
+++ b/public/ia11.html
@@ -56,7 +56,8 @@
             alt="Rectangle428"
             class="ia11-rectangle4"
           /></a>
-          <span class="ia11-text02"><span>Далі</span></span>
+          <a href="ia20.html">
+          <span class="ia11-text02"><span>Далі</span></span></a>
           <span class="ia11-text04"><span>Київ</span></span>
           <span class="ia11-text06"><span>Харків</span></span>
           <span class="ia11-text08"><span>Львів</span></span>
