--- a/public/ia15.html
+++ b/public/ia15.html
@@ -52,7 +52,8 @@
             alt="Rectangle32137"
             class="ia15-rectangle3"
           /></a>
-          <span class="ia15-text02"><span>ДАЛІ</span></span>
+          <a href="ia11.html">
+          <span class="ia15-text02"><span>ДАЛІ</span></span></a>
           <span class="ia15-text04">
             <span>
               <span>ВОДІЙСЬКЕ ПОСВІДЧЕННЯ ПІДТВЕРДЖЕНО.</span>
