--- a/public/ia6.html
+++ b/public/ia6.html
@@ -58,7 +58,7 @@
             class="ia6-rectangle3"
           />
         </a>
-          <span class="ia6-text2"><span>ОТРИМАТИ КОД</span></span>
+        <a href="ia-default.html"><span class="ia6-text2"><span>ОТРИМАТИ КОД</span></span></a>
           <span class="ia6-text4"><span>Електронна пошта</span></span>
           <img
             src="public/external/image271865-lk8kc-200w.png"
