--- a/public/ia8.html
+++ b/public/ia8.html
@@ -55,8 +55,8 @@
             src="public/external/rectangle52145-h85g-200h.png"
             alt="Rectangle52145"
             class="ia8-rectangle5"
-          />
-          <span class="ia8-text2"><span>ЗАВАНТАЖИТИ</span></span>
+          /><a href="ia9.html">
+          <span class="ia8-text2"><span>ЗАВАНТАЖИТИ</span></span></a>
           <span class="ia8-text4">
             <span>БУДЬ-ЛАСКА ДОДАЙТЕ ВОДІЙСЬКЕ ПОСВІДЧЕННЯ</span>
           </span>
