--- a/public/ia9.html
+++ b/public/ia9.html
@@ -58,8 +58,8 @@
             src="public/external/rectangle32156-77u-200h.png"
             alt="Rectangle32156"
             class="ia9-rectangle3"
-          /></a>
-          <span class="ia9-text6"><span>ДАЛІ</span></span>
+          /></a><a href="ia15.html">
+          <span class="ia9-text6"><span>ДАЛІ</span></span></a>
           <img
             src="public/external/image241862-akhq-200w.png"
             alt="image241862"
