переходы с проблемой истории и меню

--- a/public/ia12.html
+++ b/public/ia12.html
@@ -137,20 +137,21 @@
             alt="Rectangle14218"
             class="ia12-rectangle14"
           />
-          <img
+        
+          <a href="ia14.html"><img
             src="public/external/rectangle9220-m89k-200h.png"
             alt="Rectangle9220"
             class="ia12-rectangle9"
-          />
-          <img
+          /></a>
+          <a href="ia13.html"><img
             src="public/external/rectangle187910-ix2-200h.png"
             alt="Rectangle187910"
             class="ia12-rectangle18"
-          />
+          /></a>
           <span class="ia12-text04"><span>Ціна, від</span></span>
           <span class="ia12-text06"><span>Ціна, до</span></span>
-          <span class="ia12-text08"><span>Замовити</span></span>
-          <span class="ia12-text10"><span>Перегляд</span></span>
+          <a href="ia14.html"><span class="ia12-text08"><span>Замовити</span></span></a>
+          <a href="ia13.html"><span class="ia12-text10"><span>Перегляд</span></span></a>
           <span class="ia12-text12"><span>Економ</span></span>
           <span class="ia12-text14"><span>Комфорт</span></span>
           <img
@@ -624,16 +625,16 @@
               class="ia12-line2044"
             />
           </div>
-          <img
+          <a href="ia11.html"><img
             src="public/external/goback7847-6sip-200h.png"
             alt="GoBack7847"
             class="ia12-go-back"
-          />
-          <img
+          /></a>
+          <a href="menu.html"><<img
             src="public/external/menu7960-c7g.svg"
             alt="Menu7960"
             class="ia12-menu"
-          />
+          /></a>
           <img
             src="public/external/sedan8117-89pb-200h.png"
             alt="Sedan8117"
