--- a/public/ia13.html
+++ b/public/ia13.html
@@ -52,16 +52,16 @@
           />
           <span class="ia13-text"><span>AUDI A6 2004р. 3.0л.</span></span>
           <span class="ia13-text02"><span>240 ГРН/ГОД.</span></span>
-          <img
+          <a href="ia12.html"><img
             alt="GoBack7849"
             src="public/external/goback7849-47z-200h.png"
             class="ia13-go-back"
-          />
-          <img
+          /></a>
+          <a href="menu.html"><img
             alt="Menu7966"
             src="public/external/menu7966-631yh.svg"
             class="ia13-menu"
-          />
+          /></a>
           <img
             alt="ChevronRight7912"
             src="public/external/chevronright7912-i67p-200h.png"
@@ -114,12 +114,12 @@
             src="public/external/shape1674-ngu.svg"
             class="ia13-shape"
           />
-          <img
+          <a href="ia14.html"><img
             alt="Rectangle91757"
             src="public/external/rectangle91757-3uoi-200h.png"
             class="ia13-rectangle9"
-          />
-          <span class="ia13-text18"><span>Замовити</span></span>
+          /></a>
+          <a href="ia14.html"><span class="ia13-text18"><span>Замовити</span></span></a>
         </div>
       </div>
     </div>
