--- a/public/ia14.html
+++ b/public/ia14.html
@@ -385,11 +385,11 @@
               class="ia14-line2042"
             />
           </div>
-          <img
+          <a href="ia12.html"><img
             src="public/external/goback7848-8tfh-200h.png"
             alt="GoBack7848"
             class="ia14-go-back"
-          />
+          /></a>
           <div class="ia14-group14">
             <img
               src="public/external/downbutton7853-9305-200h.png"
@@ -403,25 +403,25 @@
             alt="Rectangle121819"
             class="ia14-rectangle12"
           />
-          <img
+          <a href="menu.html"><img
             src="public/external/menu7963-95mb.svg"
             alt="Menu7963"
             class="ia14-menu"
-          />
+          /></a>
           <span class="ia14-text07"><span>Доступна</span></span>
-          <img
+          <a href="ia13.html"><img
             src="public/external/rectangle187910-q47t-200h.png"
             alt="Rectangle187910"
             class="ia14-rectangle18"
-          />
-          <div class="ia14-component1">
+          /></a>
+          <a href="ia16.html"><div class="ia14-component1">
             <img
               src="public/external/rectangle197910-hzuk-200h.png"
               alt="Rectangle197910"
               class="ia14-rectangle19"
             />
             <span class="ia14-text09"><span>Сплатити</span></span>
-          </div>
+          </div></a>
           <img
             src="public/external/sedan8117-g-200h.png"
             alt="Sedan8117"
@@ -429,11 +429,11 @@
           />
           <span class="ia14-text11"><span>*ххх* грн</span></span>
           <span class="ia14-text13"><span>Час оренди, год.</span></span>
-          <img
+          <a href="ia13.html"><img
             src="public/external/info1851-r3ox.svg"
             alt="Info1851"
             class="ia14-info"
-          />
+          /></a>
         </div>
       </div>
     </div>
