--- a/public/ia16.html
+++ b/public/ia16.html
@@ -404,18 +404,18 @@
               />
             </div>
           </div>
-          <img
+          <a href="ia12.html"><img
             src="public/external/rectangle168115-lhpo-200h.png"
             alt="Rectangle168115"
             class="ia16-rectangle16"
-          />
-          <img
+          /></a>
+          <a href="ia12.html"><img
             src="public/external/rectangle371811-ijm8-200h.png"
             alt="Rectangle371811"
             class="ia16-rectangle37"
-          />
-          <span class="ia16-text14"><span>Завершити</span></span>
-          <span class="ia16-text16"><span>Додати час</span></span>
+          /></a>
+          <a href="ia12.html"><span class="ia16-text14"><span>Завершити</span></span></a>
+          <a href="ia12.html"><span class="ia16-text16"><span>Додати час</span></span></a>
           <img
             src="public/external/sedan8118-t98-200h.png"
             alt="Sedan8118"
@@ -436,7 +436,8 @@
             alt="Localgasstation1531"
             class="ia16-localgasstation"
           />
-          <div class="ia16-group15">
+          <a href="ia13.html">
+            <div class="ia16-group15">
             <img
               src="public/external/vector1537-jfyo.svg"
               alt="Vector1537"
@@ -447,8 +448,8 @@
               alt="OpenLock1811"
               class="ia16-open-lock"
             />
-          </div>
-          <img
+          </div></a>
+          <a href="ia12.html"><img
             src="public/external/rectangle191811-wkze-200h.png"
             alt="Rectangle191811"
             class="ia16-rectangle19"
@@ -457,7 +458,7 @@
             src="public/external/lock1811-fxmw.svg"
             alt="Lock1811"
             class="ia16-lock"
-          />
+          /></a>
         </div>
       </div>
     </div>
