--- a/public/ia18.html
+++ b/public/ia18.html
@@ -45,11 +45,12 @@
 
       <div class="ia18-container">
         <div class="ia18-ia18">
-          <img
+          <a href="ia11.html">
+            <img
             src="public/external/goback1811-wdd-200h.png"
             alt="GoBack1811"
             class="ia18-go-back"
-          />
+          /></a>
           <div class="ia18-group14">
             <img
               src="public/external/downbutton1811-pr0g-200h.png"
@@ -69,7 +70,7 @@
               alt="Rectangle19I181"
               class="ia18-rectangle19"
             />
-            <span class="ia18-text2"><span>Додати</span></span>
+            <a href="ia16.html"><span class="ia18-text2"><span>Додати</span></span></a>
           </div>
           <span class="ia18-text4"><span>*ххх* грн</span></span>
           <span class="ia18-text6"><span>Час оренди, год.</span></span>
