--- a/public/ia20.html
+++ b/public/ia20.html
@@ -45,11 +45,11 @@
 
       <div class="ia20-container">
         <div class="ia20-ia20">
-          <img
+          <a href="ia11.html"><img
             src="public/external/goback1811-utca-200h.png"
             alt="GoBack1811"
             class="ia20-go-back"
-          />
+          /></a>
           <span class="ia20-text"><span>Фільтри</span></span>
           <div class="ia20-group16">
             <img
@@ -93,8 +93,8 @@
             alt="Rectangle41812"
             class="ia20-rectangle4"
           />
-          <span class="ia20-text10"><span>Застосувати</span></span>
-          <span class="ia20-text12"><span>Скасувати всі</span></span>
+          <a href="ia11.html"><span class="ia20-text10"><span>Застосувати</span></span></a>
+          <a href="ia11.html"><span class="ia20-text12"><span>Скасувати всі</span></span></a>
         </div>
       </div>
     </div>
