--- a/public/menu1.html
+++ b/public/menu1.html
@@ -46,11 +46,11 @@
       <div class="menu1-container">
         <div class="menu1-menu">
           <span class="menu1-text"><span>Способи оплати:</span></span>
-          <img
+          <a href="menu.html"><img
             src="public/external/goback7851-9j7a-200h.png"
             alt="GoBack7851"
             class="menu1-go-back"
-          />
+          /></a>
           <img
             src="public/external/radiobuttonunchecked7974-nws.svg"
             alt="Radiobuttonunchecked7974"
