--- a/public/menu2.html
+++ b/public/menu2.html
@@ -49,11 +49,13 @@
           <span class="menu2-text2">
             <span>Очікуйте дзвінок, оператор вже телефонує Вам!</span>
           </span>
+
+          <a href="menu.html">
           <img
             src="public/external/goback8116-jj2s-200h.png"
             alt="GoBack8116"
             class="menu2-go-back"
-          />
+          /></a>
           <span class="menu2-text4"><span>4:59</span></span>
         </div>
       </div>
