--- a/public/menu.html
+++ b/public/menu.html
@@ -69,31 +69,33 @@
               class="menu-rectangle26"
             />
           </div>
-          <img
+          <a href="ia12.html">
+            <img
             src="public/external/goback7850-2qgtg-200h.png"
             alt="GoBack7850"
             class="menu-go-back"
-          />
-          <img
+          /></a>
+          <a href="menu1.html"><img
             src="public/external/rectangle128112-dzau-200h.png"
             alt="Rectangle128112"
             class="menu-rectangle12"
-          />
-          <img
+          /></a>
+          <a href="menu3.html"><img
             src="public/external/rectangle138112-jdx-200h.png"
             alt="Rectangle138112"
             class="menu-rectangle13"
-          />
+          /></a>
           <img
             src="public/external/rectangle148112-msxi-200h.png"
             alt="Rectangle148112"
             class="menu-rectangle14"
           />
+          <a href="menu2.html">
           <img
             src="public/external/rectangle158112-x4f-200h.png"
             alt="Rectangle158112"
             class="menu-rectangle15"
-          />
+          /></a>
           <img
             src="public/external/accesstime8113-w8i9.svg"
             alt="Accesstime8113"
@@ -114,10 +116,10 @@
             alt="MagneticCard8115"
             class="menu-magnetic-card"
           />
-          <span class="menu-text04"><span>Історія поїздок</span></span>
-          <span class="menu-text06"><span>Служба підтримки</span></span>
+          <a href="menu3.html"><span class="menu-text04"><span>Історія поїздок</span></span></a>
+            <a href="menu2.html"><span class="menu-text06"><span>Служба підтримки</span></span></a>
           <div class="menu-iconactionstarrate"></div>
-          <span class="menu-text08"><span>Способи оплати</span></span>
+          <a href="menu1.html"><span class="menu-text08"><span>Способи оплати</span></span></a>
           <span class="menu-text10"><span>Оцінити додаток</span></span>
         </div>
       </div>
