--- a/public/menu3.html
+++ b/public/menu3.html
@@ -55,11 +55,11 @@
           <span class="menu3-text04"><span>120₴</span></span>
           <span class="menu3-text06"><span>30 мін</span></span>
           <span class="menu3-text08"><span>AUDI A6 C5</span></span>
-          <img
+          <a href="ia16.html"><img
             src="public/external/goback7852-r9dx-200h.png"
             alt="GoBack7852"
             class="menu3-go-back"
-          />
+          /></a>
         </div>
       </div>
     </div>
