--- a/public/ia10.html
+++ b/public/ia10.html
@@ -54,7 +54,7 @@
           />
         </a>
         
-          <span class="ia10-text"><span>ДАЛІ</span></span>
+          <span class="ia10-text"><span><a href="ia3.html">ДАЛІ</a></span></span>
           <span class="ia10-text2">
             <span>
               <span>УВАГА!</span>
