--- a/public/ia3.html
+++ b/public/ia3.html
@@ -59,7 +59,7 @@
           />
         </a>
 
-          <span class="ia3-text2"><span>ОТРИМАТИ КОД</span></span>
+          <span class="ia3-text2"><span><a href="ia5.html">ОТРИМАТИ КОД</a></span></span>
           <span class="ia3-text4"><span>Електронна пошта</span></span>
 
         <a href="index.html"><img
