--- a/public/ia5.html
+++ b/public/ia5.html
@@ -78,7 +78,7 @@
             class="ia5-rectangle3"
           />
         </a>
-          <span class="ia5-text2"><span>ПІДТВЕРДИТИ</span></span>
+          <span class="ia5-text2"><span><a href="ia11.html">ПІДТВЕРДИТИ</a></span></span>
           <img
             src="public/external/goback7842-yxis-200h.png"
             alt="GoBack7842"
